[project]
name = "livraria"
version = "0.1.0"
description = "tutorial Marco André 2023"
authors = [
    {name = "Rafaella Ulbrich", email = "rafaelacamilly2018@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
